--- a/experiment_1.ipynb
+++ b/experiment_1.ipynb
@@ -8,13 +8,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Date:       March 26, 2023\n",
+    "* Date:       April 6, 2023\n",
     "* Experiment: Use YOLOv8 without changing its default configurations/layers.\n",
-    "* Classes:    fully_covered, partially_covered, and not_covered\n",
-    "* Dataset:    ----- images"
+    "* Classes:    uncovered, fully_covered, partially_covered\n",
+    "* Dataset:    31650 images (53395 annotations)\n",
+    "* uncovered         = 16372\n",
+    "* fully_covered     = 17199 \n",
+    "* partially_covered = 19824"
    ]
   },
   {
@@ -34,24 +38,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ultralytics YOLOv8.0.57  Python-3.9.13 torch-2.0.0+cpu CPU\n",
-      "Setup complete  (16 CPUs, 15.4 GB RAM, 212.4/475.7 GB disk)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install ultralytics\n",
     "import ultralytics\n",
     "ultralytics.checks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "from IPython.display import display, Image\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOME = os.getcwd()\n",
+    "print(f'🚀 Running this code in {HOME}')"
    ]
   },
   {
@@ -68,7 +84,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset_path = r\"C:\\Users\\sheil\\OneDrive\\Documents\\thesis\\dataset\"\n",
+    "\n",
+    "with open(os.path.join(dataset_path, \"data.yaml\")) as file:\n",
+    "    yaml_content = file.read()\n",
+    "    print(yaml_content)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 — Training\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!yolo task=detect mode=train model=yolov8s.pt data={dataset_path}/data.yaml epochs=300 imgsz=800 plots=True"
+   ]
   }
  ],
  "metadata": {
